<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		mi_perfil
	 *	@date 		Thursday 08th of February 2024 02:01:16 AM
	 *	@title 		Ventanas
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/mi_perfil" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__mi_perfil"
				android:background="@drawable/_bg__mi_perfil_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="375dp"
				android:layout_height="812dp" />


			<RelativeLayout android:id="@+id/frame_botones"
				android:layout_marginTop="725dp"
				android:layout_marginStart="19dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__frame_botones_ek1"
					android:background="@drawable/_bg__frame_botones_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="336dp"
					android:layout_height="66dp" />


				<RelativeLayout android:id="@+id/boton_rating"
					android:layout_marginTop="0dp"
					android:layout_marginStart="180dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__boton_rating_ek1"
						android:background="@drawable/_bg__boton_rating_ek1_shape"
						 android:layout_marginStart="-180dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />

					<View   android:id="@+id/rectangle_5"
						android:background="@drawable/rectangle_5_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />


					<RelativeLayout android:id="@+id/icono_rating"
						android:layout_marginTop="17dp"
						android:layout_marginStart="15dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__icono_rating_ek1"
							android:background="@drawable/_bg__icono_rating_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="36dp"
							android:layout_height="36dp" />

						<ImageView android:id="@+id/icon"
							android:src="@drawable/icon"
							android:contentDescription="icon"
							 android:layout_marginStart="1.5dp"
							android:layout_marginTop="4.5dp"
							android:layout_width="33dp"
							android:layout_height="27dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/boton_nueva_consulta"
					android:layout_marginTop="0dp"
					android:layout_marginStart="90dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__boton_nueva_consulta_ek1"
						android:background="@drawable/_bg__boton_nueva_consulta_ek1_shape"
						 android:layout_marginStart="-90dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />

					<View   android:id="@+id/rectangle_4"
						android:background="@drawable/rectangle_4_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/boton_perfil"
					android:layout_marginTop="0dp"
					android:layout_marginStart="270dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__boton_perfil_ek1"
						android:background="@drawable/_bg__boton_perfil_ek1_shape"
						 android:layout_marginStart="-270dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />

					<View   android:id="@+id/rectangle_6"
						android:background="@drawable/rectangle_6_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />


					<RelativeLayout android:id="@+id/icono_user"
						android:layout_marginTop="15dp"
						android:layout_marginStart="15dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__icono_user_ek1"
							android:background="@drawable/_bg__icono_user_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="36dp"
							android:layout_height="36dp" />

						<ImageView android:id="@+id/icon_ek1"
							android:src="@drawable/icon_ek1"
							android:contentDescription="icon_ek1"
							 android:layout_marginStart="1.5dp"
							android:layout_marginTop="1.5dp"
							android:layout_width="33dp"
							android:layout_height="33dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/boton_consultas"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__boton_consultas_ek1"
						android:background="@drawable/_bg__boton_consultas_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />

					<View   android:id="@+id/rectangle_3"
						android:background="@drawable/rectangle_3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="66dp"
						android:layout_height="66dp" />


					<RelativeLayout android:id="@+id/icono_accion"
						android:layout_marginTop="17dp"
						android:layout_marginStart="15dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__icono_accion_ek1"
							android:background="@drawable/_bg__icono_accion_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="36dp"
							android:layout_height="36dp" />

						<ImageView android:id="@+id/combined_shape"
							android:src="@drawable/combined_shape"
							android:contentDescription="combined_shape"
							 android:layout_marginStart="3dp"
							android:layout_marginTop="3dp"
							android:layout_width="30dp"
							android:layout_height="30dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/_24___basic___plus"
					android:layout_marginTop="15dp"
					android:layout_marginStart="105dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg___24___basic___plus_ek1"
						android:background="@drawable/_bg___24___basic___plus_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="36dp"
						android:layout_height="36dp" />

					<ImageView android:id="@+id/icon_ek2"
						android:src="@drawable/icon_ek2"
						android:contentDescription="icon_ek2"
						 android:layout_marginStart="3dp"
						android:layout_marginTop="3dp"
						android:layout_width="30dp"
						android:layout_height="30dp" />

				</RelativeLayout>

			</RelativeLayout>

			<ImageView android:id="@+id/polygon_1"
				android:src="@drawable/polygon_1"
				android:contentDescription="polygon_1"
				 android:layout_marginStart="473dp"
				android:layout_marginTop="-170dp"
				android:layout_width="375dp"
				android:layout_height="298.85dp" />


			<RelativeLayout android:id="@+id/avatar_profile_photo"
				android:layout_marginTop="82dp"
				android:layout_marginStart="108dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__avatar_profile_photo_ek1"
					android:background="@drawable/_bg__avatar_profile_photo_ek1_shape"
					 android:layout_marginStart="-4dp"
					android:layout_marginTop="-4dp"
					android:layout_width="160dp"
					android:layout_height="160dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/_24___basic___pencil_create"
				android:layout_marginTop="38dp"
				android:layout_marginStart="304dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___24___basic___pencil_create"
					android:background="@drawable/_bg___24___basic___pencil_create_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="44dp"
					android:layout_height="44dp" />

				<ImageView android:id="@+id/icon_ek3"
					android:src="@drawable/icon_ek3"
					android:contentDescription="icon_ek3"
					 android:layout_marginStart="3.67dp"
					android:layout_marginTop="3.67dp"
					android:layout_width="36.67dp"
					android:layout_height="36.67dp" />

			</RelativeLayout>

			<TextView android:id="@+id/nombre__apellidos"
				android:textSize="20sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="108dp"
				android:layout_marginTop="269dp"
				android:layout_width="177dp"
				android:layout_height="32dp"
				android:text="@string/nombre__apellidos_string"
				 />

			<TextView android:id="@+id/tus_profesiones"
				android:textSize="20sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="19dp"
				android:layout_marginTop="410dp"
				android:layout_width="146dp"
				android:layout_height="35dp"
				android:text="@string/tus_profesiones_string"
				 />

			<TextView android:id="@+id/titulo"
				android:textSize="16sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="41dp"
				android:layout_marginTop="464dp"
				android:layout_width="107.6dp"
				android:layout_height="23.6dp"
				android:text="@string/titulo_string"
				 />

			<TextView android:id="@+id/descripcion_de_la_profesion_agregada_"
				android:textSize="13sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="37dp"
				android:layout_marginTop="500dp"
				android:layout_width="301.3dp"
				android:layout_height="24.3dp"
				android:text="@string/descripcion_de_la_profesion_agregada__string"
				 />


			<RelativeLayout android:id="@+id/_24___basic___image"
				android:layout_marginTop="496dp"
				android:layout_marginStart="308dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___24___basic___image"
					android:background="@drawable/_bg___24___basic___image_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="36dp"
					android:layout_height="36dp" />

				<ImageView android:id="@+id/icon_ek4"
					android:src="@drawable/icon_ek4"
					android:contentDescription="icon_ek4"
					 android:layout_marginStart="3dp"
					android:layout_marginTop="3dp"
					android:layout_width="30dp"
					android:layout_height="30dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/_1_0_icon_solid"
				android:layout_marginTop="464dp"
				android:layout_marginStart="319dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___1_0_icon_solid_ek1"
					android:background="@drawable/_bg___1_0_icon_solid_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="14dp"
					android:layout_height="14dp" />

				<TextView android:id="@+id/icon_ek5"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/icon_ek5_color"
					android:layout_marginLeft="-1dp"
					android:layout_marginTop="0dp"
					android:layout_width="18.2dp"
					android:layout_height="17.2dp"
					android:text="@string/icon_ek5_string"
					 />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/_24___basic___plus_1"
				android:layout_marginTop="654dp"
				android:layout_marginStart="19dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___24___basic___plus"
					android:background="@drawable/_bg___24___basic___plus_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="24dp"
					android:layout_height="24dp" />

				<ImageView android:id="@+id/icon_ek6"
					android:src="@drawable/icon_ek6"
					android:contentDescription="icon_ek6"
					 android:layout_marginStart="2dp"
					android:layout_marginTop="2dp"
					android:layout_width="20dp"
					android:layout_height="20dp" />

			</RelativeLayout>

			<TextView android:id="@+id/agregar_profesion"
				android:textSize="15sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="51dp"
				android:layout_marginTop="656dp"
				android:layout_width="130.5dp"
				android:layout_height="22.5dp"
				android:text="@string/agregar_profesion_string"
				 />

			<TextView android:id="@+id/descripcion_de_la_profesion_agregada__ek1"
				android:textSize="13sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="37dp"
				android:layout_marginTop="597dp"
				android:layout_width="301.3dp"
				android:layout_height="24.3dp"
				android:text="@string/descripcion_de_la_profesion_agregada__ek1_string"
				 />


			<RelativeLayout android:id="@+id/_24___basic___image_ek4"
				android:layout_marginTop="593dp"
				android:layout_marginStart="308dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg___24___basic___image_ek5"
					android:background="@drawable/_bg___24___basic___image_ek5_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="36dp"
					android:layout_height="36dp" />

				<ImageView android:id="@+id/icon_ek7"
					android:src="@drawable/icon_ek7"
					android:contentDescription="icon_ek7"
					 android:layout_marginStart="3dp"
					android:layout_marginTop="3dp"
					android:layout_width="30dp"
					android:layout_height="30dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/icon_container"
				android:layout_marginTop="557dp"
				android:layout_marginStart="320dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__icon_container_ek1"
					android:background="@drawable/_bg__icon_container_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="12dp"
					android:layout_height="22dp" />

				<ImageView android:id="@+id/__img___1_0_icon_solid"
					android:src="@drawable/__img___1_0_icon_solid"
					android:contentDescription="__img___1_0_icon_solid"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="5dp"
					android:layout_width="12dp"
					android:layout_height="12dp" />

			</RelativeLayout>

			<ImageView android:id="@+id/__img___rectangle_10"
				android:src="@drawable/__img___rectangle_10"
				android:contentDescription="__img___rectangle_10"
				 android:layout_marginStart="18.5dp"
				android:layout_marginTop="450.5dp"
				android:layout_width="335dp"
				android:layout_height="87dp" />

			<ImageView android:id="@+id/__img___rectangle_11"
				android:src="@drawable/__img___rectangle_11"
				android:contentDescription="__img___rectangle_11"
				 android:layout_marginStart="18.5dp"
				android:layout_marginTop="547.5dp"
				android:layout_width="335dp"
				android:layout_height="87dp" />

			<TextView android:id="@+id/titulo_ek1"
				android:textSize="16sp"
				android:textColor="@color/_bg__frame_botones_ek1_color"
				android:layout_marginLeft="41dp"
				android:layout_marginTop="561dp"
				android:layout_width="107.6dp"
				android:layout_height="23.6dp"
				android:text="@string/titulo_ek1_string"
				 />


			<RelativeLayout android:id="@+id/email"
				android:layout_marginTop="311dp"
				android:layout_marginStart="30dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__email_ek1"
					android:background="@drawable/_bg__email_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="316dp"
					android:layout_height="70dp" />

				<ImageView android:id="@+id/__img___container"
					android:src="@drawable/__img___container"
					android:contentDescription="__img___container"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="21dp"
					android:layout_width="316dp"
					android:layout_height="48dp" />


				<RelativeLayout android:id="@+id/text"
					android:layout_marginTop="35dp"
					android:layout_marginStart="13dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__text_ek1"
						android:background="@drawable/_bg__text_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="153dp"
						android:layout_height="22dp" />

					<TextView android:id="@+id/email_ek2"
						android:textSize="17sp"
						android:textColor="@color/email_ek2_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="168.7dp"
						android:layout_height="26.7dp"
						android:text="@string/email_ek2_string"
						 />

				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>